updated the code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Game</h2>
+    <h1>Tic Tac Toe</h2>
       <div class="msg-container hide">
         <h4 id="msg"></h4>
         <button class="new btn">New Game</button>
